force-app/main/default/objects/Account/fields/Aros_Lead_Generated__c.field-meta.xml
<CustomField>
    <fullName>Aros_Lead_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aros Lead Generated</label>
    <type>Checkbox</type>
</CustomField>