force-app/main/default/objects/Account/fields/Aros_Lead_Generation_Type__c.field-meta.xml
<CustomField>
    <fullName>Aros_Lead_Generation_Type__c</fullName>
    <label>Aros Lead Generation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>