force-app/main/default/objects/Account/fields/BudgetApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>BudgetApprovalStatus__c</fullName>
    <label>Budget Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Status</valueSetName>
    </valueSet>
</CustomField>