force-app/main/default/objects/Account/fields/Call_Priority__c.field-meta.xml
<CustomField>
    <fullName>Call_Priority__c</fullName>
    <label>Call Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>