force-app/main/default/objects/Account/fields/Cancelled_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Tickets__c</fullName>
    <label>Cancelled tickets</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>