force-app/main/default/objects/Account/fields/County_Denmark__c.field-meta.xml
<CustomField>
    <fullName>County_Denmark__c</fullName>
    <formula>IF(VALUE(  BillingPostalCode ) &lt;= 999, &quot;Specielle postnumre til organisationer og virksomheder med meget store mængder post&quot;,
IF(VALUE(BillingPostalCode ) &lt;= 3699, &quot;Sjælland&quot;,
IF(VALUE(BillingPostalCode ) &lt;= 3799, &quot;Bornholm&quot;,
IF(VALUE(BillingPostalCode ) &lt;= 3899, &quot;Oprindeligt Færøerne, men dér benyttes nu et selvstændigt tre-cifret system&quot;,
IF(VALUE(BillingPostalCode ) &lt;= 3999, &quot;Grønland&quot;,
IF(VALUE(BillingPostalCode ) &lt;= 4999, &quot;Sjælland&quot;,
IF(VALUE(BillingPostalCode ) &lt;= 5999, &quot;Fyn&quot;,
IF(VALUE(BillingPostalCode ) &lt;= 9999, &quot;Jylland&quot;,
&quot;Unknown&quot;
)
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County (Denmark)</label>
    <type>Text</type>
</CustomField>