force-app/main/default/objects/Account/fields/Customer_number__c.field-meta.xml
<CustomField>
    <fullName>Customer_number__c</fullName>
    <description>This is an Auto Number field that goes up by one for each new record created. It is used to generate a Customer Number (Kundenummer) for each account</description>
    <label>Customer number</label>
    <type>AutoNumber</type>
</CustomField>