force-app/main/default/objects/Account/fields/Customer_Satisfaction_SMS_replied_date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_SMS_replied_date__c</fullName>
    <label>Customer Satisfaction SMS replied date</label>
    <type>DateTime</type>
</CustomField>