force-app/main/default/objects/Account/fields/Customer_Satisfaction_SMS_sent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_SMS_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Satisfaction SMS sent</label>
    <type>Checkbox</type>
</CustomField>