force-app/main/default/objects/Account/fields/Date_of_Reference__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Reference__c</fullName>
    <label>Date of Reference</label>
    <type>DateTime</type>
</CustomField>