force-app/main/default/objects/Account/fields/Day_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Birth__c</fullName>
    <label>Day of Birth</label>
    <length>2</length>
    <type>Text</type>
</CustomField>