force-app/main/default/objects/Account/fields/Days_Since_Most_Recent_Event__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Most_Recent_Event__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(Date_of_Most_Recent_Event__c),
    Date_of_Most_Recent_Event__c &gt; TODAY()
  ),
  NULL,
  TODAY() - Date_of_Most_Recent_Event__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Most Recent Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>