force-app/main/default/objects/Account/fields/Days_Until_Last_Event__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Last_Event__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(Date_of_Last_Event__c),
    Date_of_Last_Event__c &lt; TODAY()
  ),
  NULL,
  Date_of_Last_Event__c - TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Last Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>