force-app/main/default/objects/Account/fields/Designated_Lecturer__c.field-meta.xml
<CustomField>
    <fullName>Designated_Lecturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designated Lecturer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lecturer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>