force-app/main/default/objects/Account/fields/Document_Validity__c.field-meta.xml
<CustomField>
    <fullName>Document_Validity__c</fullName>
    <inlineHelpText>This field is reset every few minutes, to ensure document validity.</inlineHelpText>
    <label>Document Validity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unvalidated</fullName>
                <default>true</default>
                <label>Unvalidated</label>
            </value>
            <value>
                <fullName>Automatically Reset</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>