force-app/main/default/objects/Account/fields/Does_not_want_membership__c.field-meta.xml
<CustomField>
    <fullName>Does_not_want_membership__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field only if you have presented the customer with the free membership and the customer has declined</inlineHelpText>
    <label>Does not want membership</label>
    <type>Checkbox</type>
</CustomField>