force-app/main/default/objects/Account/fields/Fejls_gning_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Fejls_gning_Calendly__c</fullName>
    <description>Bruges til at finde ud af hvor forkert data kommer fra (Hvert flow smider et statisk text-stykke ind i dette felt)</description>
    <label>Fejlsøgning (Calendly)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>