force-app/main/default/objects/Account/fields/Foredragsdato__c.field-meta.xml
<CustomField>
    <fullName>Foredragsdato__c</fullName>
    <formula>Foredragstid_og_dato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foredragsdato</label>
    <type>Date</type>
</CustomField>