force-app/main/default/objects/Account/fields/GetAccept_Link__c.field-meta.xml
<CustomField>
    <fullName>GetAccept_Link__c</fullName>
    <label>GetAccept Link</label>
    <type>Url</type>
</CustomField>