force-app/main/default/objects/Account/fields/Has_Future_Event__c.field-meta.xml
<CustomField>
    <fullName>Has_Future_Event__c</fullName>
    <formula>NOT( ISBLANK( Date_of_Next_Event__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Future Event</label>
    <type>Checkbox</type>
</CustomField>