force-app/main/default/objects/Account/fields/Has_more_than_1_child__c.field-meta.xml
<CustomField>
    <fullName>Has_more_than_1_child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has more than 1 child</label>
    <type>Checkbox</type>
</CustomField>