force-app/main/default/objects/Account/fields/HasCampaignMember__c.field-meta.xml
<CustomField>
    <fullName>HasCampaignMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasCampaignMember</label>
    <type>Checkbox</type>
</CustomField>