force-app/main/default/objects/Account/fields/Host_Rating__c.field-meta.xml
<CustomField>
    <fullName>Host_Rating__c</fullName>
    <label>Host Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>