force-app/main/default/objects/Account/fields/Host_Stars__c.field-meta.xml
<CustomField>
    <fullName>Host_Stars__c</fullName>
    <formula>CASE(
  Host_Rating__c,
  1, &quot;⭐☆☆☆&quot;,
  2, &quot;⭐⭐☆☆&quot;,
  3, &quot;⭐⭐⭐☆&quot;,
  4, &quot;⭐⭐⭐⭐&quot;,
  &quot;No rating&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Stars</label>
    <type>Text</type>
</CustomField>