force-app/main/default/objects/Account/fields/Host_Type__c.field-meta.xml
<CustomField>
    <fullName>Host_Type__c</fullName>
    <label>Host Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lecture_Host_Type</valueSetName>
    </valueSet>
</CustomField>