force-app/main/default/objects/Account/fields/Hubhus_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubhus_ID__c</fullName>
    <label>Hubhus ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>