force-app/main/default/objects/Account/fields/Include_Aros_ID_insurance__c.field-meta.xml
<CustomField>
    <fullName>Include_Aros_ID_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Aros&apos; ID insurance</label>
    <type>Checkbox</type>
</CustomField>