force-app/main/default/objects/Account/fields/Invalid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Reason__c</fullName>
    <label>Invalid Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Passed Away</fullName>
            </value>
            <value>
                <fullName>Phone Number Does Not Exist</fullName>
            </value>
            <value>
                <fullName>Dementia</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Company Closed</fullName>
            </value>
            <value>
                <fullName>Dormant / No Active Operations</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Not in Target Audience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>