force-app/main/default/objects/Account/fields/Is_Active_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Subscriber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Subscriber</label>
    <type>Checkbox</type>
</CustomField>