force-app/main/default/objects/Account/fields/Is_Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Active__c</fullName>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner Active</label>
    <type>Checkbox</type>
</CustomField>