force-app/main/default/objects/Account/fields/Is_Upcoming_Subscription_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Is_Upcoming_Subscription_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Upcoming Subscription Renewal</label>
    <type>Checkbox</type>
</CustomField>