force-app/main/default/objects/Account/fields/Journal_States__c.field-meta.xml
<CustomField>
    <fullName>Journal_States__c</fullName>
    <label>Journal States</label>
    <length>100</length>
    <type>Text</type>
</CustomField>