force-app/main/default/objects/Account/fields/Kommentarer_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Kommentarer_Calendly__c</fullName>
    <label>Kommentarer (Calendly)</label>
    <type>TextArea</type>
</CustomField>