force-app/main/default/objects/Account/fields/L_nelead__c.field-meta.xml
<CustomField>
    <fullName>L_nelead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lånelead</label>
    <type>Checkbox</type>
</CustomField>