force-app/main/default/objects/Account/fields/Latest_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Latest_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Accounts (Latest Campaign)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>