force-app/main/default/objects/Account/fields/Lead_Publisher_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Lead_Publisher_Campaign__c</fullName>
    <label>Lead Publisher Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not specified</fullName>
                <default>true</default>
                <label>Not specified</label>
            </value>
            <value>
                <fullName>Batch 3</fullName>
            </value>
            <value>
                <fullName>Batch 2</fullName>
            </value>
            <value>
                <fullName>Batch 1</fullName>
            </value>
            <value>
                <fullName>BA24-TEST1</fullName>
            </value>
            <value>
                <fullName>BA24-Møder</fullName>
            </value>
            <value>
                <fullName>Få gratis børnetestamente Juli 2019</fullName>
            </value>
            <value>
                <fullName>Få gratis børnetestamente August 2019</fullName>
            </value>
            <value>
                <fullName>Få gratis børnetestamente August 2019 B</fullName>
            </value>
            <value>
                <fullName>Få gratis børnetestamente August 2019 C</fullName>
            </value>
            <value>
                <fullName>Saseline 01</fullName>
            </value>
            <value>
                <fullName>Charlotte video 19-8-2019</fullName>
            </value>
            <value>
                <fullName>Premio011019test1</fullName>
            </value>
            <value>
                <fullName>DFJAmagerSeniorKlub27112019</fullName>
            </value>
            <value>
                <fullName>Influencer10052020CamillaFramnes</fullName>
            </value>
            <value>
                <fullName>Influencer11052020TrineStaberg</fullName>
            </value>
            <value>
                <fullName>Influencer04052020AliceStadil</fullName>
            </value>
            <value>
                <fullName>Influencer08042020LisbethØstergaard</fullName>
            </value>
            <value>
                <fullName>Influencer13042020JosefineValentin</fullName>
            </value>
            <value>
                <fullName>FB17062020gratisViljeyttring</fullName>
            </value>
            <value>
                <fullName>Influencer10062020TrineSchmidt</fullName>
            </value>
            <value>
                <fullName>Influencer16072020ChristinaDueholm</fullName>
            </value>
            <value>
                <fullName>TestamenteDK_Oprettestamente1</fullName>
            </value>
            <value>
                <fullName>Retargeting</fullName>
            </value>
            <value>
                <fullName>03082020TestamenteDK_001</fullName>
            </value>
            <value>
                <fullName>gratisbtsverige juli/aug2020</fullName>
            </value>
            <value>
                <fullName>Influencer23072020JulieElgaard</fullName>
            </value>
            <value>
                <fullName>Influencer23072020CecilieSchmeichel</fullName>
            </value>
            <value>
                <fullName>fb11082020KristineInfluencer</fullName>
            </value>
            <value>
                <fullName>Influencer23072020ChristinaAmbrus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>