force-app/main/default/objects/Account/fields/Lead_Publisher_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Publisher_Name__c</fullName>
    <label>Lead Publisher Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eGentic</fullName>
            </value>
            <value>
                <fullName>facebook</fullName>
            </value>
            <value>
                <fullName>website</fullName>
            </value>
            <value>
                <fullName>BoligAdvokat24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>