force-app/main/default/objects/Account/fields/Lead_Publisher_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Publisher_Source__c</fullName>
    <label>Lead Publisher Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>