force-app/main/default/objects/Account/fields/Lecture_Note__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Note__c</fullName>
    <label>Lecture Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>