force-app/main/default/objects/Account/fields/Legal_assistance__c.field-meta.xml
<CustomField>
    <fullName>Legal_assistance__c</fullName>
    <label>Legal assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer requested lawyer meeting</fullName>
            </value>
            <value>
                <fullName>Booked Tailored Document meeting</fullName>
            </value>
            <value>
                <fullName>Questions related to generating documents</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>