force-app/main/default/objects/Account/fields/Link_til_Retskreds__c.field-meta.xml
<CustomField>
    <fullName>Link_til_Retskreds__c</fullName>
    <label>Link til Retskreds</label>
    <type>Url</type>
</CustomField>