force-app/main/default/objects/Account/fields/Manually_Qualified_for_Aros__c.field-meta.xml
<CustomField>
    <fullName>Manually_Qualified_for_Aros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Qualified for Aros</label>
    <type>Checkbox</type>
</CustomField>