force-app/main/default/objects/Account/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales meeting</fullName>
            </value>
            <value>
                <fullName>Service call</fullName>
            </value>
            <value>
                <fullName>Legal assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>