force-app/main/default/objects/Account/fields/Month_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Birth__c</fullName>
    <label>Month of Birth</label>
    <length>20</length>
    <type>Text</type>
</CustomField>