force-app/main/default/objects/Account/fields/Most_Recent_Document_Validation__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Document_Validation__c</fullName>
    <label>Most Recent Document Validation</label>
    <type>DateTime</type>
</CustomField>